DashboardX/assets/css/styles.css
@import "../fonts/Calligraffitti/calligraffitti.css";
@import "http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic";

* {
    font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
}

a {
    color: #306B87;
    text-decoration: none;
}
a.light {
    color: #FFFFFF;
}
    a:hover:not(.loginlink) {
        color: #67ADCE;
    }

body {
    background: none repeat scroll 0 0 #FFFFFF;
    font: 12px "Open Sans",Arial,Helvetica,Sans-Serif;
    margin: 0;
    overflow-x: hidden;
    overflow-y: scroll;
}

body, html, #main, #wrapper {
    height: 96%;
}

h1, h2, h3, h4, h5, h6 {
    margin: 10px 0;
}

header {
    background: none repeat scroll 0 0 #1565AF;
    border-bottom: 1px solid #06427A;
    color: #FFFFFF;
    font-size: 14px;
    height: 21px;
    left: 0;
    padding: 5px;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2000;
}

label {
    display: inline-block;
    font-size: 12px;
    font-weight: bold;
}

select {
    border: 1px solid #CCCCCC;
    font: 12px "Open Sans",Arial,Helvetica,Sans-Serif;
    padding: 3px;
}

#back {
    background: none repeat scroll 0 0 #25A0DA;
    color: #FFFFFF;
    display: none;
    font-size: 14px;
    padding: 10px 20px;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1;
}

#column .k-tooltip,
#line .k-tooltip {
    left: 50% !important;
    top: 5px !important;
}

#content {
    background: none repeat scroll 0 0 #FFFFFF;
    height: 100%;
    margin: 32px auto 10px;
}

#download_file {
    right: 0;
}

#charts {
    -moz-user-select: none;
    margin: auto;
    width: 920px;
}
    #charts > div {
        float: left;
        height: 405px;
        line-height: 405px;
        margin: 0 5px 5px;
        width: 450px;
    }
    #charts .rdContent {
        height: 421px !important;
        width: 450px !important;
    }
    #charts .sortable-placeholder {
        height: 400px;
        width: 445px;
    }
    /*
    #charts .left {
        margin: 0 20px 0 0;
    }*/

#Charts_RadDockZoneHorizontal1 {
    overflow: hidden !important;
}

#Grid_Button1 {
    margin-left: 5px;
}

#header_contents {
}

#links {
    display: none;
    left: 50%;
    margin-left: -170px;
    position: absolute;
    top: 50%;
    width: 340px;
}
    #links a {
        border: 3px outset #1565AF;
        border-radius: 10px 10px 10px 10px;
        display: inline-block;
        font-size: 30px;
        margin-right: 20px;
        min-width: 120px;
        padding: 5px 15px;
        text-align: center;
        transition: background 1s ease 0s, color 0.3s ease 0s;
    }
    #links a:not(:first-child) {
        margin: 0;
    }
    #links a:hover {
        background: none repeat scroll 0 0 #1565AF;
        color: #FFFFFF;
    }
    #links a:active {
        background: none repeat scroll 0 0 #7DB6E8;
        border-color: #B3DAFC;
        border-width: 1px;
        color: #FFFFFF;
        padding: 7px 17px;
        transition: none 0s ease 0s;
    }

#logo {
    margin-right: 5px;
}

#overlay {
    background: rgba(0, 0, 0, 0.6);
    display: none;
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 2001;
}
    #overlay img {
        margin: auto;
        width: 66px;
    }
    #overlay #loading_container {
        left: 50%;
        margin-left: -33px;
        margin-top: -33px;
        position: absolute;
        text-align: center;
        top: 50%;
    }
    #overlay #message {
        color: #FFFFFF;
        font-size: 14px;
        margin-top: 20px;
    }

#pie text {
    font-size: 11px !important;
}

#RadTabStrip1 {
    background: none repeat scroll 0 0 #FFFFFF;
}

#toolbar {
    background: #25A0DA;
    padding: 7px 10px 10px;
    position: relative;
    text-align: right;
}

._rtsLevel2 {
    margin-top: -10px;
}
    ._rtsLevel2 .rtsLI:first-child {
        margin-left: 5px;
    }
    ._rtsLevel2 .rtsLink {
        background: #0970A0 !important;
        border-color: #06427A !important;
        border-radius: 15px 5px 0 0;
    }
    ._rtsLevel2 .rtsLink.rtsSelected {
        background: #25A0DA !important;
    }

/* Button */

.button {
    background: #1A77C9;
    border: 0 none;
    border-radius: 0 0 0 0;
    box-shadow: 1px 0 1px #104A7C,
                0 1px 1px #1565AF,
                2px 1px 1px #104A7C,
                1px 2px 1px #1565AF,
                3px 2px 1px #104A7C,
                2px 3px 1px #1565AF,
                4px 3px 1px #104A7C,
                3px 4px 1px #1565AF,
                5px 4px 1px #104A7C;
    color: white;
    cursor: pointer;
    display: inline-block;
    font-family: "Open Sans",Arial,Helvetica,Sans-Serif;
    font-weight: bold;
    line-height: 1.4;
    outline: 0 none;
    padding: 3px 6px;
    position: relative;
    top: -3px;
    white-space: nowrap;
}
    .button:hover {
        background: #1365AD;
        color: white;
    }
    .button:active {
        box-shadow: 1px 0 1px #104A7C,
                    0 1px 1px #1565AF,
                    2px 1px 1px #104A7C;
        transform: translate(3px, 3px);
    }
    .button:after {
        bottom: -5px;
        content: "";
        left: 0;
        position: absolute;
        right: -5px;
        top: 0;
    }
    .button:active:after {
        bottom: -2px;
        left: -3px;
        right: -2px;
        top: -3px;
    }
    .button:not(.block) {
        margin-left: 5px;
    }
    .button.small {
        font-size: 11px;
        font-weight: normal;
        line-height: 1.4;
        padding: 1px 2px;
    }

/* Sortable */

 .column { width: 450px; height: 810px; float: left; }
.ui-sortable-placeholder { background: #EEEEEE; border: 3px dotted #AAAAAA; border-radius: 50px; visibility: visible !important; height: 399px !important; }
.ui-sortable-placeholder * { visibility: hidden; }

.download-image {
    background: rgba(0, 0, 0, 0.3);
    display: none;
    line-height: 20px;
    padding: 10px;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 1;
}

.chart {
    display: inline-block;
    margin: auto;
    /*overflow-x: auto;
    overflow-y: auto;*/
    overflow: hidden;
    position: relative;
    width: 450px;
}

.handle {
    background: url('../img/icons/move.png');
    bottom: 0;
    color: #666666;
    content: "≡";
    height: 20px;
    left: 0;
    width: 20px;
    opacity: 0.5;
    position: absolute;
    z-index: 1;
}

.left {
    float: left;
}

.RadDockZone {
    border: none;
}

.rdPlaceHolder {
    background: rgba(0, 0, 0, 0.07);
    border-radius: 50px;
    transform: scale(.95);
}

.right {
    float: right;
}

.sortable-placeholder {
    background: rgba(0, 0, 0, 0.07);
    border: 1px dashed #CCCCCC;
}

.title {
    color: #FFFFFF;
    display: inline-block;
    font-size: 15px;
    font-weight: bold;
}

#login_container {
    float: right;
    outline: medium none;
}
    #login_container table td {
        font-size: 12px;
    }

.drop {
    background: none repeat scroll 0 0 #F3F8FC;
    border: 4px solid #D7E5EE;
    border-radius: 0.3em 0 0.3em 0.3em;
    box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.4);
    clear: both;
    color: #333333;
    display: none;
    height: 140px;
    margin-top: 0;
    padding: 10px;
    position: absolute;
    right: 15px;
    top: 27px;
    width: 240px;
    z-index: 1000;
}

.loginlink {
    border-radius: 5px 5px 5px 5px;
    color: #FFFFFF;
    float: right;
    margin: -3px 10px 0 0;
    padding: 4px;
    text-decoration: none;
}

.loginlink:after {
    content: "▼";
}
    .loginlink:hover {
        background: none repeat scroll 0 0 #B5CCDE;
    }
    .loginlink:active, .loginlink:focus {
        outline: medium none;
    }
    .loginlink.clicked {
        background: none repeat scroll 0 0 #D7E5EE;
        border-radius: 5px 5px 0 0;
        color: #256483;
    }
    .loginlink.clicked:after {
        content: "▲";
    }
    .loginlink.clicked:hover {
        background: none repeat scroll 0 0 #D7E5EE;
    }

.login-links {
    margin-top: 5px;
}
    .login-links a {
        color: #4792D3;
        display: block;
    }
    .login-links a:hover {
        color: #87C2F2;
    }

#login_container {}
    #login_container input[type="submit"] {
        background: -moz-linear-gradient(center top , #FFC800, #FFA800) repeat scroll 0 0 transparent;
        border: 1px solid #CB8604;
        border-radius: 5px 5px 5px 5px;
        color: #40361A;
        cursor: pointer;
        display: block;
        float: right;
        font-family: "Open Sans", Helvetica,Arial,sans-serif;
        font-size: 14px;
        font-weight: bold;
        margin-top: 5px;
        padding: 10px;
        text-decoration: none;
        width: 100%;
    }
    #login_container input[type="submit"]:hover {
        background: -moz-linear-gradient(center top , #FFC800, #E89900) repeat scroll 0 0 transparent;
        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
    }
    #login_container input[type="submit"]:active {
        background: none repeat scroll 0 0 #FFC800;
    }
    #login_container input {
        background: none repeat scroll 0 0 #FFFFFF;
        border: 1px solid #CCCCCC;
        border-radius: 5px 5px 5px 5px;
        color: #666666;
        font-size: 14px;
        padding: 5px;
    }
    #login_container label {
        color: #666666;
        margin: 0 5px 0 0;
    }
    #login_container p {
        clear: both;
        color: #666666;
        font-size: 12px;
    }
    #login_container p a {
        color: #0784B3;
        font-weight: bold;
        text-decoration: none;
    }
    #login_container p a:hover {
        color: #127296;
    }

.remember {
    float: left;
    margin-top: 20px;
}

.checkbox {
    background: none repeat scroll 0 0 transparent;
    border: medium none;
    margin: 0 5px 0 0;
    padding: 0;
    width: auto;
}

.ui-state-error, .ui-state-highlight {
    font-size: 11px;
    margin-bottom: 5px;
    padding: 3px;
}

.tooltip span {
    display: none;
    margin-left: 8px;
}

.tooltip:hover span {
    background: url("../images/tip.gif") no-repeat scroll left center #333333;
    color: #FFFFFF;
    display: inline;
    font-size: 12px;
    font-weight: bold;
    opacity: 0.8;
    padding: 6px 8px 6px 20px;
    position: absolute;
}

[id*=Panel] {
    overflow: hidden;
    position: relative;
}

[id^="RadMultiPage"] {
    height: 100%;
    position: relative;
}

.RadGrid_MetroTouch,
.RadGrid_MetroTouch .rgMasterTable,
.RadGrid_MetroTouch .rgDetailTable,
.RadGrid_MetroTouch .rgGroupPanel table,
.RadGrid_MetroTouch .rgCommandRow table,
.RadGrid_MetroTouch .rgEditForm table,
.RadGrid_MetroTouch .rgPager table {
    font-size: 12px;
}

.RadGrid_Windows7 th.rgSorted {
    background-position: 0 -2613px !important;
}

.RadTabStrip .rtsImg {
    padding-right: 10px !important;
}

.RadTabStrip * {
    font-family: "Segoe UI",Arial,Helvetica,sans-serif !important;
}

